[package]
name = "pjtizator"
version = "1.5.1"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }

web-sys = { version = "0.3", features = [
    "Event",
    "HtmlInputElement",
    "InputEvent"
] }

wasm-bindgen = "0.2"
num-format = "0.4.0"
console_error_panic_hook = "0.1.7"
